a lot of content manip

--- a/source/contact.html.erb
+++ b/source/contact.html.erb
@@ -1,9 +1,11 @@
 ---
 title: "Contact" 
 ---
-<h1><%= current_page.data.title  %></h1>
 
-<p>Dunn Vineyards does not currently hosts tours and tastings. All wine is sold through allocation and occasionally older vintages become available. Please use the below form to contact us for further information.</p>
+<p class="lh-copy measure">Dunn Vineyards does not currently hosts tours and tastings. All wine is sold through allocation and occasionally older vintages become available. Please use the below form to contact us for further information.</p>
+
+<h2 class="normal mt5">The Mailing List</h2>
+<p class="lh-copy measure">Dunn Vineyards wine is sold from the winery through an annual allocation. Though there are several thousand individuals on our     mailing list, wine sales are based on a first come first serve basis. One of the benefits to receiving our annual offering through email, is the stories that we share with those who are interested. If you are interested in being put on the wait list to get on the mailing list please contact the winery via the form below.</p>
 
 <%= mail_to 'info@dunnvineyards.com', "info@dunnvineyards.com" %>
 
