--- a/source/family.html.erb
+++ b/source/family.html.erb
@@ -1,35 +1,44 @@
 ---
 title: "Family" 
 ---
-<h1><%= current_page.data.title  %></h1>
 
 
-	<a href="https://i2.wp.com/www.dunnvineyards.com/wp-content/uploads/2014/06/Dunn-Family2.jpg"><img class="alignleft size-medium wp-image-287" src="https://i2.wp.com/www.dunnvineyards.com/wp-content/uploads/2014/06/Dunn-Family2.jpg?resize=300%2C200" alt="Dunn Family" srcset="https://i2.wp.com/www.dunnvineyards.com/wp-content/uploads/2014/06/Dunn-Family2.jpg?resize=300%2C200 300w, https://i2.wp.com/www.dunnvineyards.com/wp-content/uploads/2014/06/Dunn-Family2.jpg?resize=1024%2C685 1024w, https://i2.wp.com/www.dunnvineyards.com/wp-content/uploads/2014/06/Dunn-Family2.jpg?w=1920 1920w, https://i2.wp.com/www.dunnvineyards.com/wp-content/uploads/2014/06/Dunn-Family2.jpg?w=2880 2880w" sizes="(max-width: 300px) 100vw, 300px" data-recalc-dims="1" /></a>
-<p>&#8220;Beauty is in the eye of the beholder,&#8221; and for Randy the beauty was Howell Mountain. In 1979, Randy and his wife Lori moved with their son Mike into a home on the outskirts of the quiet town of Angwin. While the valley floor inspired farmers to plant vineyards and make wine, Howell Mountain captured Randy&#8217;s heart. From these mountain vineyards the Dunn family made it&#8217;s mark on the wine industry and the land in turn made it&#8217;s mark on the family.</p>
+	<img src="https://i2.wp.com/www.dunnvineyards.com/wp-content/uploads/2014/06/Dunn-Family2.jpg">
 
 
-<h3>Randy Dunn</h3>
-<a href="https://i0.wp.com/www.dunnvineyards.com/wp-content/uploads/2014/06/Randy.jpg"><img class="alignleft size-medium wp-image-289" src="https://i0.wp.com/www.dunnvineyards.com/wp-content/uploads/2014/06/Randy.jpg?resize=300%2C200" alt="Randy Dunn" srcset="https://i0.wp.com/www.dunnvineyards.com/wp-content/uploads/2014/06/Randy.jpg?resize=300%2C200 300w, https://i0.wp.com/www.dunnvineyards.com/wp-content/uploads/2014/06/Randy.jpg?resize=1024%2C685 1024w, https://i0.wp.com/www.dunnvineyards.com/wp-content/uploads/2014/06/Randy.jpg?w=1920 1920w, https://i0.wp.com/www.dunnvineyards.com/wp-content/uploads/2014/06/Randy.jpg?w=2880 2880w" sizes="(max-width: 300px) 100vw, 300px" data-recalc-dims="1" /></a>
-<p>Founder, owner and winemaker. Graduated from UC Davis in 1975 with a degree in Enology. Made wine in the past for Caymus, Livingston, La Jota, Pahlmeyer, and Palmaz. Currently making wine under the Feather label for the <a title="Long Shadow Wines" href="http://longshadows.com/" target="_blank">Long Shadow</a> Vintner’s group in Walla Walla, Washington. An avid pilot, Randy enjoys traveling by air in his Turbo Commander. If he’s not flying, he is on a mountain bike on the Wildlake property.</p>
+  <p class="lh-copy measure">&#8220;Beauty is in the eye of the beholder,&#8221; and for Randy the beauty was Howell Mountain. In 1979, Randy and his wife Lori moved with their son Mike into a home on the outskirts of the quiet town of Angwin. While the valley floor inspired farmers to plant vineyards and make wine, Howell Mountain captured Randy&#8217;s heart. From these mountain vineyards the Dunn family made it&#8217;s mark on the wine industry and the land in turn made it&#8217;s mark on the family.</p>
 
 
-<h3>Lori Dunn</h3>
-<a href="https://i2.wp.com/www.dunnvineyards.com/wp-content/uploads/2014/06/Lori.jpg"><img class="alignleft size-medium wp-image-285" src="https://i2.wp.com/www.dunnvineyards.com/wp-content/uploads/2014/06/Lori.jpg?resize=300%2C200" alt="Lori" srcset="https://i2.wp.com/www.dunnvineyards.com/wp-content/uploads/2014/06/Lori.jpg?resize=300%2C200 300w, https://i2.wp.com/www.dunnvineyards.com/wp-content/uploads/2014/06/Lori.jpg?resize=1024%2C685 1024w, https://i2.wp.com/www.dunnvineyards.com/wp-content/uploads/2014/06/Lori.jpg?w=1920 1920w, https://i2.wp.com/www.dunnvineyards.com/wp-content/uploads/2014/06/Lori.jpg?w=2880 2880w" sizes="(max-width: 300px) 100vw, 300px" data-recalc-dims="1" /></a>
-<p>Founder, owner, and family backbone. Loralee worked side by side with Randy during the early years, as well as handled the office. Her office duties might have ended with her full time duties as a mother to two young girls and a teenage boy, but Lori continued to work events. By no means did her responsibilities lessen over the years as she cared for the family, home and property.</p>
+<h2 class="normal mt5">Randy Dunn</h2>
+<img src="https://i0.wp.com/www.dunnvineyards.com/wp-content/uploads/2014/06/Randy.jpg">
+
+<p class="lh-copy measure">Founder, owner and winemaker. Graduated from UC Davis in 1975 with a degree in Enology. Made wine in the past for Caymus, Livingston, La Jota, Pahlmeyer, and Palmaz. Currently making wine under the Feather label for the <a title="Long Shadow Wines" href="http://longshadows.com/" target="_blank">Long Shadow</a> Vintner’s group in Walla Walla, Washington. An avid pilot, Randy enjoys traveling by air in his Turbo Commander. If he’s not flying, he is on a mountain bike on the Wildlake property.</p>
 
 
-<h3>Michael &#8220;Mike&#8221; Dunn</h3>
-<a href="https://i0.wp.com/www.dunnvineyards.com/wp-content/uploads/2014/06/mike2.jpg"><img class="alignleft size-medium wp-image-286" src="https://i0.wp.com/www.dunnvineyards.com/wp-content/uploads/2014/06/mike2.jpg?resize=300%2C200" alt="Mike Dunn" srcset="https://i0.wp.com/www.dunnvineyards.com/wp-content/uploads/2014/06/mike2.jpg?resize=300%2C200 300w, https://i0.wp.com/www.dunnvineyards.com/wp-content/uploads/2014/06/mike2.jpg?resize=1024%2C685 1024w, https://i0.wp.com/www.dunnvineyards.com/wp-content/uploads/2014/06/mike2.jpg?w=1920 1920w, https://i0.wp.com/www.dunnvineyards.com/wp-content/uploads/2014/06/mike2.jpg?w=2880 2880w" sizes="(max-width: 300px) 100vw, 300px" data-recalc-dims="1" /></a>
-<p>Son, cellar master and assistant winemaker. Mike attended Davis and graduated from UC Santa Barbara in 1988. Mike has been working full time since 1999 at the winery, each year taking on more and more responsibilities. He has also provided new information, practices and procedures. Mike and his wife, Kara, started their own wine label <a title="Retro Cellars" href="http://www.retrocellars.com" target="_blank">Retro Cellars</a> in 2003. He is enjoying making two different Petite Sirah wines. Mike and Kara have 2 beautiful children, one in an art college and the other in high school. Mike, who’s former career was owning and operating a mountain and road bike shop in Calistoga, is responsible for his family’s love of biking. When Mike isn’t working you might see him on a bike or singing. Music has been a passion of Mike’s for years, and it’s obvious if you engage him in the topic.</p>
+<h2 class="normal mt5">Lori Dunn</h2>
+<img src="https://i2.wp.com/www.dunnvineyards.com/wp-content/uploads/2014/06/Lori.jpg">
+<p class="lh-copy measure">Founder, owner, and family backbone. Loralee worked side by side with Randy during the early years, as well as handled the office. Her office duties might have ended with her full time duties as a mother to two young girls and a teenage boy, but Lori continued to work events. By no means did her responsibilities lessen over the years as she cared for the family, home and property.</p>
 
-<h3>Kristina Dunn</h3>
-<a href="https://i1.wp.com/www.dunnvineyards.com/wp-content/uploads/2014/06/kristina.jpg"><img class="alignleft size-medium wp-image-293" src="https://i1.wp.com/www.dunnvineyards.com/wp-content/uploads/2014/06/kristina.jpg?resize=300%2C200" alt="Kristina Dunn" srcset="https://i1.wp.com/www.dunnvineyards.com/wp-content/uploads/2014/06/kristina.jpg?resize=300%2C200 300w, https://i1.wp.com/www.dunnvineyards.com/wp-content/uploads/2014/06/kristina.jpg?resize=1024%2C685 1024w, https://i1.wp.com/www.dunnvineyards.com/wp-content/uploads/2014/06/kristina.jpg?w=1920 1920w, https://i1.wp.com/www.dunnvineyards.com/wp-content/uploads/2014/06/kristina.jpg?w=2880 2880w" sizes="(max-width: 300px) 100vw, 300px" data-recalc-dims="1" /></a>
-<p>The youngest in the family, graduated Cal Poly San Luis Obispo with a BS in Wine &amp; Viticulture in 2005, hopes to continue in her father and brother’s footsteps. She has been working at the winery since 2007. Though her title is Director of Marketing, she enjoys helping out wherever she is needed, especially if it is on the crush pad. Kristina and Brian were married in 2010 and have two young daughters.</p>
 
-<h3>Erin Begerow</h3>
+<h2 class="normal mt5">Michael &#8220;Mike&#8221; Dunn</h2>
+<img src="https://i0.wp.com/www.dunnvineyards.com/wp-content/uploads/2014/06/mike2.jpg">
+
+<p class="lh-copy measure">Son, cellar master and assistant winemaker. Mike attended Davis and graduated from UC Santa Barbara in 1988. Mike has been working full time since 1999 at the winery, each year taking on more and more responsibilities. He has also provided new information, practices and procedures. Mike and his wife, Kara, started their own wine label <a title="Retro Cellars" href="http://www.retrocellars.com" target="_blank">Retro Cellars</a> in 2003. He is enjoying making two different Petite Sirah wines. Mike and Kara have 2 beautiful children, one in an art college and the other in high school. Mike, who’s former career was owning and operating a mountain and road bike shop in Calistoga, is responsible for his family’s love of biking. When Mike isn’t working you might see him on a bike or singing. Music has been a passion of Mike’s for years, and it’s obvious if you engage him in the topic.</p>
+
+<h2 class="normal mt5">Kristina Dunn</h2>
+<img src="https://i1.wp.com/www.dunnvineyards.com/wp-content/uploads/2014/06/kristina.jpg">
+<p class="lh-copy measure">The youngest in the family, graduated Cal Poly San Luis Obispo with a BS in Wine &amp; Viticulture in 2005, hopes to continue in her father and brother’s footsteps. She has been working at the winery since 2007. Though her title is Director of Marketing, she enjoys helping out wherever she is needed, especially if it is on the crush pad. Kristina and Brian were married in 2010 and have two young daughters.</p>
+
+
+<h2 class="normal mt5">Jenny Dunn</h2>
+<p class="lh-copy measure">Last but not least- Jennifer Jean Dunn: Randy and Lori’s first daughter who passed away at 20 years old in 1999 of Bacterial Meningitis. She attended Chico State, loved riding horses with dad and playing softball. It is safe to say, that we are who we are today because of the love she brought into our lives.</p>
+
+
+<hr class="mt6">
+<div class="pa5 bg-light-silver mv5">
+<p class="i">Current Copy</p class="lh-copy measure">
+
+
+<h2 class="normal mt5">Erin Begerow</h2>
 <img src="https://i0.wp.com/www.dunnvineyards.com/wp-content/uploads/2014/06/DSC_0354.jpg?resize=300%2C200" alt="" data-recalc-dims="1"> 
-<p>Office manager. She is a native Californian, and a graduate of Pomona College. Erin takes care of all office work, and started working for the Dunn&#8217;s in October of 1994. She and her husband live just down the road from the winery. They have two children, both of whom are in college now. She also coaches the local age group swim team.</p>
-
-<h3>Jenny Dunn</h3>
-<p>Last but not least- Jennifer Jean Dunn: Randy and Lori’s first daughter who passed away at 20 years old in 1999 of Bacterial Meningitis. She attended Chico State, loved riding horses with dad and playing softball. It is safe to say, that we are who we are today because of the love she brought into our lives.</p>
-
+<p class="lh-copy measure">Office manager. She is a native Californian, and a graduate of Pomona College. Erin takes care of all office work, and started working for the Dunn&#8217;s in October of 1994. She and her husband live just down the road from the winery. They have two children, both of whom are in college now. She also coaches the local age group swim team.</p>
