--- a/source/library-wines.html.erb
+++ b/source/library-wines.html.erb
@@ -1,7 +1,7 @@
 ---
 title: "Library Wines" 
 ---
-<h1><%= current_page.data.title  %></h1>
-<p class="lh-copy measure">From time to time, wines from previous vintages become available. The best way to find out what we have is to contact the winery directly, by completing this form or calling 707-965-3642.</p>
+
+<p class="lh-copy measure">Historically our wines have been known for their age ability. We have maintained this classic, structured style and many of the wines need several years in bottle to be fully appreciated. We maintain a well stocked library and re-release wine to our mailing list periodically.</p> 
 
 <%= image_tag '89-Dunn-Howell-Cab.jpg', :class => 'w6' %>
