--- a/source/press.html.erb
+++ b/source/press.html.erb
@@ -1,10 +1,13 @@
 ---
 title: "Press" 
 ---
-<h1><%= current_page.data.title  %></h1>
 
+<p><%= link_to '"Dunn Vineyards Is Making Some of the Best Napa Valley Cabernet"', "http://www.townandcountrymag.com/leisure/drinks/a4256/jay-mcinerney-june-july-2014/", target: :_blank, :class => "link black-70 underline-hover" %><br>
+  <span class="f5 i pl5">Town & Country, Nov 2015, by Jay McInerney</span></p>
+<p><%= link_to '"Randy Dunn\'s Cabernet Crusade"', "http://www.sfgate.com/wine/thirst/article/Randy-Dunn-s-Cabernet-crusade-3813953.php", target: :_blank, :class => "link black-70 underline-hover" %><br><span class="f5 i pl5">SF Gate, Aug 2012, 
 
-<p><%= link_to 'Dunn Vineyards Is Making Some of the Best Napa Valley Cabernet (Town & Country, Jay McInerney Nov 2015)', "http://www.townandcountrymag.com/leisure/drinks/a4256/jay-mcinerney-june-july-2014/", target: :_blank %></p>
-<p><%= link_to 'Randy Dunn\'s Cabernet crusade (SFGATE, August 2012)', "http://www.sfgate.com/wine/thirst/article/Randy-Dunn-s-Cabernet-crusade-3813953.php", target: :_blank %></p>
-
+<hr class="mt6">
+<div class="pa5 bg-light-silver mv5">
+<p class="i">Current Copy</p>
 <%= image_tag 'press/sfgate.png' %>
+</div>
