--- a/source/tasting-notes.html.erb
+++ b/source/tasting-notes.html.erb
@@ -2,7 +2,10 @@
 title: 'Tasting Notes'
 ---
 
-<h1><%= current_page.data.title  %></h1>
+<h3>2013 Dunn Vineyards Howell Mountain</h3>
+<p class="lh-copy measure">The 2013 Cabernet Sauvignon Howell Mountain is a towering majestic wine. Rich, powerful and yet massively tannic, the 2013 possesses a stunning combination of super-ripe fruit, bright acids and plenty of supporting structure. In the early going, the Howell Mountain is a bit reticent, especially next to the Trailer, but after several hours, the vibrancy of the Howell Mountain bottling dazzles. Dunn's Howell Mountain Cabernet is without question one of the wines of the great 2013 vintage.</p>
+
+
 
 <h3>2012 Dunn Vineyards “Howell Mountain” &#8211; notes by Antonio Galloni</h3>
 
