--- a/source/vineyards.html.erb
+++ b/source/vineyards.html.erb
@@ -1,33 +1,63 @@
 ---
 title: "Vineyards" 
 ---
-<h1><%= current_page.data.title  %></h1>
 
-<h2>GENERAL VINEYARD INFO</h2>
+<p class="lh-copy measure">Our vineyards dot the slopes of our home here on Howell Mountain. As a family we own over 200 acres – 35 of which are planted to vine. Sixty three of these forested acres are entrusted to the <%= link_to 'Napa Valley Land Trust', 'napa--land-trust.html', :class => "link underline-hover" %> . This ensures that regardless of who owns this land in the future it will stay as it is now – as trees.</p>
 
-<p>
+<h2 class="normal mt5 mb0">Alta Tierra Vineyard</h2>
+<p class="lh-copy i measure mt0">Formerly the "Trailer Vineyard"</p>
+<p class="lh-copy measure">This was the original vineyard purchased in 1978 by Randy and Lori. It was replanted in 2015 and subsequently renamed as well. The orientation of the vineyard is basically East/West the Cabernet is grafted on rootstock 3309c with spacing between 8 and 9 x 4.5 depending on the slope.</p>
+
+<h2 class="normal mt5">Frank Vineyard</h2>
+<p class="lh-copy measure">We have managed this vineyard since the beginning of 1979. Named for Henry Frank who entrusted Randy with managing this vineyard for him back in 1979. Though we don’t own it, it feels very much like part of our land as it is nestled between two of our vineyards and farmed by us. This vineyard was planted in 1965 and the two blocks were replanted in two separate years; 1989 and 1993. The block planted in 1989 is on 110R rootstock and the 1993 block is planted to 3309. The vines are planted North/South.</p>
+
+<h2 class="normal mt5">Park Muscatine Vineyard</h2>
+<p class="lh-copy measure">This vineyard was purchased in 1990. The first block which we call “Cuervo” was replanted in 1991. The “JK” block was replanted in 1993, and it wasn’t until 5 years later that we replanted the block we simply call “Below House”. The fourth and final block within that vineyard was not replanted until 2016. Formerly the “Old Petite” block it was the fruit that Mike and Kara utilized to start their Retro Cellars project. Currently named the “Coyote” block. It has been planted to Cabernet Sauvignon.  Slopes and sun exposure vary along this 16 acre vineyard.</p>
+
+<h2 class="normal mt5">Lake Vineyard</h2>
+<p class="lh-copy measure">This vineyard is located directly adjacent to the winery and Randy and Lori’s home. Before this vineyard was planted, Randy grew hay for 20 years to feed the Dunn’s horses. These 8 acres are mostly cabernet sauvignon, except for a few rows of Syrah (for home consumption). There is also about 1 acre of Petite Sirah and Peloursin planted on the west boarder of the vineyard. Mike named this Los Abuelos and uses it for his Retro Cellars label. The Cabernet Sauvignon was planted in 3 blocks. Lake I was planted in 2000 using 101-14 rootstock. Lake II was planted in 2001 on 3309. The last block, Lake III, was planted also on 3309 in 2003. Each block contains a mix of 4 different clones; 337, 15, Dunn (grafting’s from our Trailer Vineyard) and Frank (grafting’s from the Harry Frank vineyard). This vineyard is the coolest of all, as it sits in a small valley, and requires overhead sprinklers for frost protection along with a wind machine.</p>
+
+
+
+<hr class="mt6">
+
+<div class="bg-washed-yellow pa4 f5">
+  <h3>Notes & Questions</h3>
+  <p class="lh-copy measure"><b>Broaden the page?</b> There's no real info on the winery itself on the site.  But the fact that it used to be a stagecoach stop is pretty cool.  There's a good quote by Jay McInerney describing it. Also, this might be a good place to bring in some info on Howell Mountain appelation. Some folks have a separate page for Howell Mountain.</p>
+  <p class="lh-copy measure"><b>Break out specs?</b> Just like on the wine page, it might be interesting to break out the specs of each vineyard instead of putting it in a paragraph format. Example: Acres, Year Purchased, Orientation, rootstock, spacing, owner, blocks, replanted, renamed.</p>
+  <p class="lh-copy measure"><b>Added "Trailer Vineyard" name.</b> Because that name is what is used in all the history both on the site and in other press. Also, if you want to mention the trailer vineyard 2 pack, you could do that here as well. Crosslinking is good.</p>
+  <p class="lh-copy measure"><b>Illustration or map</b> Similar to what they did with Hudson?</p>
+</div>
+
+<div class="pa5 bg-light-silver mv5">
+<p class="i">Current Copy</p>
+
+<h2 class="normal">GENERAL VINEYARD INFO</h2>
+
+<p class="lh-copy measure">
 Several vineyards dot the hills owned by the Dunn family. However, the best part is that these vineyards are literally just dots in the forested hills. Randy and Lori Dunn own over 200 acres – 35 of which are planted. Sixty three of those forested acres are entrusted to the Napa Valley Land Trust. This ensures that regardless of who owns this land in the future it will stay as it is now – as trees.
  </p>
 
-<p>
+<p class="lh-copy measure">
 	All of the vineyards owned by the Dunn family are located on Howell Mountain. We have 29 acres of Cabernet Sauvignon.
 </p>
 
 <h3>Trailer Vineyard</h3>
 
-<p>The Trailer Vineyard got its name because of the trailer that was located in the vineyard. Before the home was purchased; Randy, Lori and Mike would come to the property on the weekends and stay in the trailer while Randy tended to the vines. This vineyard was originally a hobby vineyard, first planted in 1972. The 10 x 12 foot space was changed by Randy in 80’s to 5 X 12 as well as the vines were trained to a bilateral cordon trellis system. Though we don’t know the clone of Cabernet Sauvignon that was planted in this vineyard, we do know that it was on St. George rootstock. This vineyard has always been the backbone to our Howell Mountain wine. Spring of 2014 we had to make the decision to rip out the vineyard and replant. It was certainly a sad event, but new vines means new life and longevity to the vineyard and the winery. The new Trailer Vineyards vines were planted in Spring of 2015 and it’s been a wonderful rebirth.</p>
+<p class="lh-copy measure">The Trailer Vineyard got its name because of the trailer that was located in the vineyard. Before the home was purchased; Randy, Lori and Mike would come to the property on the weekends and stay in the trailer while Randy tended to the vines. This vineyard was originally a hobby vineyard, first planted in 1972. The 10 x 12 foot space was changed by Randy in 80’s to 5 X 12 as well as the vines were trained to a bilateral cordon trellis system. Though we don’t know the clone of Cabernet Sauvignon that was planted in this vineyard, we do know that it was on St. George rootstock. This vineyard has always been the backbone to our Howell Mountain wine. Spring of 2014 we had to make the decision to rip out the vineyard and replant. It was certainly a sad event, but new vines means new life and longevity to the vineyard and the winery. The new Trailer Vineyards vines were planted in Spring of 2015 and it’s been a wonderful rebirth.</p>
 
 <h3>Harry Frank Vineyard</h3>
 
-<p>We have managed this vineyard since the beginning of 1979. Though we don’t own it, it is feels very much like part of our land as it is nestled between two of our vineyards. This vineyard was planted in 1965 and the two blocks were replanted in two separate years; 1989 and 1993. The block planted in 1989 is on 110R rootstock and the 1993 block is planted to 3309. The vines are planted North/South.</p>
+<p class="lh-copy measure">We have managed this vineyard since the beginning of 1979. Though we don’t own it, it is feels very much like part of our land as it is nestled between two of our vineyards. This vineyard was planted in 1965 and the two blocks were replanted in two separate years; 1989 and 1993. The block planted in 1989 is on 110R rootstock and the 1993 block is planted to 3309. The vines are planted North/South.</p>
 
 <h3>Park Muscatine Vineyard</h3>
 
-<p>This vineyard was purchased in 1990. The first block which we call “Cuervo” was replanted in 1991. The “JK” block was replanted in 1993, and it wasn’t until 5 years later that we replanted the block we simply call “House”. The fourth and final block within that vineyard was not replanted; instead it remains the original vines. The trellis is all bilateral cordon. Within this vineyard is also an old block of Petite Sirah, which Mike cares for and uses in his Howell Mountain Retro Cellars. This 4 acre Petite Sirah vineyard was planted in the 1950’s. We have irrigation within all of our vineyards. Slopes and sun exposure vary along this 16 acre vineyard.</p>
+<p class="lh-copy measure">This vineyard was purchased in 1990. The first block which we call “Cuervo” was replanted in 1991. The “JK” block was replanted in 1993, and it wasn’t until 5 years later that we replanted the block we simply call “House”. The fourth and final block within that vineyard was not replanted; instead it remains the original vines. The trellis is all bilateral cordon. Within this vineyard is also an old block of Petite Sirah, which Mike cares for and uses in his Howell Mountain Retro Cellars. This 4 acre Petite Sirah vineyard was planted in the 1950’s. We have irrigation within all of our vineyards. Slopes and sun exposure vary along this 16 acre vineyard.</p>
 
 <h3>Lake Vineyard</h3>
 
-<p>This vineyard is located directly adjacent to the winery and Randy and Lori’s home. Before this vineyard was planted, Randy grew hay for 20 years to feed the Dunn’s horses. These 8 acres are mostly cabernet sauvignon, except for a few rows of Sirah (for home consumption). There is also about 1 acre of Petite Sirah planted on the west boarder of the vineyard. Mike named this Los Abuelos and uses it for his Retro Cellars label. The Cabernet Sauvignon was planted in 3 blocks. Lake I was planted in 2000 using 101-14 rootstock. Lake II was planted in 2001 on 3309. The last block, Lake III, was planted also on 3309 in 2003. Each block contains a mix of 4 different clones; 337, 15, Dunn (grafting’s from our Trailer Vineyard) and Frank (grafting’s from the Harry Frank vineyard). This vineyard is the coolest of all, as it sits in a small valley, and requires overhead sprinklers for frost protection along with a wind machine.</p>
+<p class="lh-copy measure">This vineyard is located directly adjacent to the winery and Randy and Lori’s home. Before this vineyard was planted, Randy grew hay for 20 years to feed the Dunn’s horses. These 8 acres are mostly cabernet sauvignon, except for a few rows of Sirah (for home consumption). There is also about 1 acre of Petite Sirah planted on the west boarder of the vineyard. Mike named this Los Abuelos and uses it for his Retro Cellars label. The Cabernet Sauvignon was planted in 3 blocks. Lake I was planted in 2000 using 101-14 rootstock. Lake II was planted in 2001 on 3309. The last block, Lake III, was planted also on 3309 in 2003. Each block contains a mix of 4 different clones; 337, 15, Dunn (grafting’s from our Trailer Vineyard) and Frank (grafting’s from the Harry Frank vineyard). This vineyard is the coolest of all, as it sits in a small valley, and requires overhead sprinklers for frost protection along with a wind machine.</p>
 
 <%= image_tag 'randy.jpg', :class => 'w6' %>
 <%= image_tag 'rainbow.jpg', :class => 'w6' %>
+</div>
