--- a/source/_footer-nav.erb
+++ b/source/_footer-nav.erb
@@ -1,10 +1,3 @@
-<nav class="">
-  <% data.toc.each do |f| %>
-    <li class="lh-copy list">
-      <%= link_to  f.title, f.url, :class => 'dark-blue link underline-hover' %> 
-    </li>
-  <% end %>
-</nav>
 
 <ul>
   <li><%= link_to  'Home', 'index.html', :class => 'dark-blue link underline-hover' %></li>
@@ -25,8 +18,7 @@
   <li><%= link_to  'Vineyards', 'vineyards.html', :class => 'dark-blue link underline-hover' %>
   <li><%= link_to  'About', 'wines.html', :class => 'dark-blue link underline-hover' %>
   <ul>
-    <li><%= link_to  'Family', 'family.html', :class => 'dark-blue link underline-hover' %></li>
-    <li><%= link_to  'Team (?)', 'team.html', :class => 'dark-blue link underline-hover' %></li>
+    <li><%= link_to  'Family / Team?', 'family.html', :class => 'dark-blue link underline-hover' %></li>
     <li><%= link_to  'History', 'history.html', :class => 'dark-blue link underline-hover' %></li>
     <li><%= link_to  'A Year at Dunn', 'year-at-dunn.html', :class => 'dark-blue link underline-hover' %></li>
     <li><%= link_to  'Napa Land Trust', 'napa-land-trust.html', :class => 'dark-blue link underline-hover' %></li>
