--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -1,9 +1,5 @@
----
-title: "Home" 
----
-<h1><%= current_page.data.title  %></h1>
 
-<h2>Since 1979, Randy Dunn and family have owned and operated Dunn Vineyards and winery and continue to produce one of the best Cabernet Sauvignon from Howell Mountain and the Napa Valley.</h2>
+<p class="measure lh-copy"">Since 1979, Randy Dunn and family have owned and operated Dunn Vineyards and winery and continue to produce one of the best Cabernet Sauvignon from Howell Mountain and the Napa Valley.</p>
 
 <%= image_tag 'leaf-bg.jpg', :class => 'w6' %>
 
