--- a/source/wines.html.erb
+++ b/source/wines.html.erb
@@ -1,6 +1,65 @@
 ---
 title: "Wines" 
 ---
-<h1><%= current_page.data.title  %></h1>
-<p class="lh-copy measure bg-washed-red pa3">Possible landing page for all the wine stuff</p>
+
+<blockquote class="mb5">
+  <p class="lh-copy measure mb0"><i>Nothing is easygoing about Randy Dunn's Cabernets, whether it's the dense red wax atop the bottle you need to soften to access the cork, or the uncompromising style that has become his trademark. &hellip; The quietly fierce nature of Dunn's wines has never been for all comers. But Dunn has always prided himself on being different.</i></p>
+  <cite class="f5 ttu tracked tr db measure"> &mdash; Jon Bonné</cite>
+</blockquote>
+
+<p class="lh-copy measure">Dunn Vineyards produces two wines, Howell Mountain and Napa Valley. Both wines are one hundred percent Cabernet Sauvignon. The wines are made in the same classic manner that we have been making wine since 1979. Our total production varies from vintage to vintage, but we average close to 4500 total cases a year. The Howell Mountain wines consist of one hundred percent Howell Mountain fruit farmed by us. The Napa Valley wines are a blend of our Howell Mountain fruit and a small quantity of fruit that we purchase from two growers in Coombsville. This valley floor fruit contributes to the wine’s earlier approachability and softer tannic structure.</p>
+
+
+<h2 class="normal mt5">Howell Mountain Cabernet</h2>
+<p class="lh-copy measure">The Howell Mountain wines consist of one hundred percent Howell Mountain fruit farmed by us.
+<p class="lh-copy measure">One of the signatures of the Howell Mountain wine is that it is hand dipped in red wax.</p>
+<p class="lh-copy measure">
+Appelation: Napa Valley<br>
+SubAppelation: Howell Mountain Estate<br>
+Varietal: 100% Cabernet<br>
+Vineyard: ?<br>
+Barrel Program: 36 months in 100% new French oak<br>
+Estimated Alcohol Content: 14%<br>
+Estimated Maturity: 5-20 years<br><br>
+(for specific release)<br>
+   Harvest Date: <br>
+   Cases:<br>
+   Release Date:<br> 
+</p>
+
+<p><%= link_to  'How to remove the red wax &raquo;', 'how-to-remove-red-wax.html', :class => 'dark-blue link underline-hover' %></p>
+<p><%= link_to  'Tasting notes &raquo;', 'tasting-notes.html', :class => 'dark-blue link underline-hover' %></p>
+
+
+
+<h2 class="normal mt5">Napa Valley Cabernet</h2>
+<p class="lh-copy measure">The Napa Valley wines are a blend of our Howell Mountain fruit and a small quantity of fruit that we purchase from two growers in Coombsville. This valley floor fruit contributes to the wine’s   earlier approachability and softer tannic structure.</p>
+
+<h2 class="normal mt5">Allocation</h2>
+<p class="lh-copy measure">Dunn Vineyards wine is sold from the winery through an annual allocation. Though there are several thousand individuals on our     mailing list, wine sales are based on a first come first serve basis.</p>
+
+<h2 class="normal mt5">Library Wines</h2>
+<p class="lh-copy measure">From time to time we release previous vintages. (How to find out? Mailing list or specificaly ask about a vintage?)</p>
+
+
+
+<hr class="mt6">
+
+<div class="bg-washed-yellow pa4 f5">
+  <h3>Notes & Questions</h3>
+  <p class="lh-copy measure"><b>Highlight each wine:</b> I think it makes sense to highlight the wines separately. If there is a lot of info for each, then maybe they could have separate pages.</p>
+  <p class="lh-copy measure"><b>Include more details:</b> Some of the competitors have "specs" about each wine like how many cases and how long in the barrell.  If I were a wine geek, I'd probably want to know that stuff. Whatever info we provide for one, we should provide for the other.</p>
+  <p class="lh-copy measure"><b>Allocation:</b> It is natural to put something here on how to purchase the wine.</p>
+  <p class="lh-copy measure"><b>Bottle shots:</b> If we're going to do them, it makes sense to put them here.</p>
+  <p class="lh-copy measure"><b>Special Releases?:</b> Do you want to call out special things like the Trailer 2 pack?</p>
+  <p class="lh-copy measure"><b>Vintages:</b> If there is wine you're still trying to move, do you want to call out any available vintages?</p>
+ 
+  </ul>
+</div>
+
+<div class="pa5 bg-light-silver mv5">
+<p class="i">Current Copy</p>
+<p class="lh-copy measure">Dunn Vineyards wine is sold from the winery through an annual allocation. Though there are several thousand individuals on our mailing list, wine sales are based on a first come first serve basis. One of the benefits to receiving our annual offering through email, is the stories that we share with those who are interested. If you are interested in being put on the wait list to get on the mailing list please contact the winery via the form below.</p>
+
+</div>
 
