bens copy changes

--- a/source/history.html.erb
+++ b/source/history.html.erb
@@ -2,28 +2,101 @@
 title: "History"
 ---
 
-<p>1975 – Randy is hired by Caymus as the Enologist</p>
-<p>1978 – Randy and Lori purchase the original “Trailer Vineyard” on Howell Mountain. Move into the white house, Jennifer was born, Caymus makes Grace Family Vineyard Cabernet.</p>
-<p>1979 – Randy harvests 9 tons of Cabernet Sauvignon from his vineyard and an adjoining vineyard that he manages. He also purchases 3 tons from the Beatty vineyard and produces 660 cases of 750ml’s, 28 cases of magnums and 53 five liter bottles, Dunn Vineyards begins…</p>
-<p>1981 – Randy and Lori’s second daughter Kristina is born.</p>
-<p>1982 – The 5L boxes were hand made here at the winery from a fallen Ponderosa Pine. Randy makes the first Lamborn Family wine. Randy consults on Bill Smith’s revived La Jota wine with Helen Turley.</p>
-<p>1983 – Randy makes the first Grace Family Cabernet. He had been making wine with this fruit at Caymus as a single vineyard wine.</p>
-<p>1984 – ATF approves Howell Mountain AVA in January. The ’81 vintage is bottled and the 5L’s received etched bottles for the first time. Randy made the Livingstone – Moffett wine. </p>
-<p>1985 – Randy parts way with Caymus. Construction begins on the brown house. </p>
-<p>1986 – The family moves into the brown house. Randy makes the first Pahlmeyer wine after offering to buy Jayson’s fruit. </p>
-<p>1989 – The caves are dug! Dunn gets somewhere to store its barrels and Jenny and Kristina get a roller rink!</p>
-<p>1991 – Randy purchases the Park Muscatine Vineyard. Mike and Kara get married.</p>
-<p>1994 – Mike and Kara bring their first son and the first grandchild into the family as Alex is born. Erin Begerow joins the team and takes over the office management and mailing list organization</p>
-<p>1996 – Jennifer graduates HS</p>
-<p>1997 – Mike and Kara have a baby girl, the first granddaughter. Tatyana is born</p>
-<p>1998 – Mike and Kara move into their house </p>
-<p>1999 – Mike returns to help out at the winery the first order of business, building a new crush pad. Jenny passes away. Kristina graduates H.S.</p>
-<p>2001 – Randy makes the first vintage of the Palmaz wine here, as they construct their facility. Lori passes her exam and becomes a Master Gardner. Planted the Lake Vineyard and purchased the New Hearth property.</p>
-<p>2003 – Randy makes the first vintage of Feather for the Long Shadows project in the Columbia Valley of Washington. Mike buys the old vine Petite Sirah from Randy’s Park Muscatine Vineyard and starts the Retro Cellars label with Kara. </p>
-<p>2004 – Mike sells the bike shop and renovations begin on the white house (office). Sentinel Hill is purchased.</p>
-<p>2005 – Kristina graduates from Cal Poly. The first class of their Wine and Viticulture program. </p>
-<p>2006 – Kristina comes to work full time at the winery. Randy and Lori close on the Wildlake Property</p>
-<p>2009 – Kristina and Brian get married</p>
-<p>2013 – Kristina and Brian welcome their first daughter, Taylor, into the world</p>
-<p>2014 – Adriaan Foote joins the team as Mike’s assistant in the cellar</p>
-<p>2015 – Ashlyn, Kristina and Brian’s second daughter is born.</p>
+<h3 class="mt4">1975</h3> 
+<p class="lh-copy measure">Randy is hired by Caymus as the Enologist</p>
+
+
+
+
+<h3 class="mt4">1978</h3>
+<p class="lh-copy measure">Randy and Lori purchase the “Trailer Vineyard” and begin farming 5 ½ acres of Cabernet in their free time and on the weekends. Jenny is born and the family moves into the white house.</p>
+
+
+<h3 class="mt4">1979</h3>
+<p class="lh-copy measure">Randy harvests 9 tons of Cabernet Sauvignon from his vineyard and an adjoining vineyard that he manages. He also purchases 3 tons from the Beatty vineyard and produces 660 cases of 750ml’s, 28 cases of magnums and 53 five liter bottles, Dunn Vineyards begins…</p>
+
+
+<h3 class="mt4">1981</h3>
+<p class="lh-copy measure">The winery is bonded, here in Angwin.</p>
+<p class="lh-copy measure">Randy and Lori’s second daughter Kristina is born.</p>
+
+<h3 class="mt4">1982</h3>
+<p class="lh-copy measure">(pic of 5L box) made by hand from a fallen Ponderosa Pine. Randy assists the Lamborn Family with their first wine, consults on Bill Smith’s La Jota project with Helen Turley.</p>
+<p class="bg-light-silver lh-copy measure">The 5L boxes were hand made here at the winery from a fallen Ponderosa Pine. Randy makes the first Lamborn Family wine. Randy consults on Bill Smith’s revived La Jota wine with Helen Turley.</p>
+
+<h3 class="mt4">1983</h3>
+<p class="lh-copy measure">Randy makes the first Grace Family wine at the Caymus winery.</p> 
+<p class="bg-light-silver lh-copy measure">Randy makes the first Grace Family Cabernet. He had been making wine with this fruit at Caymus as a single vineyard wine.</p>
+
+<h3 class="mt4">1984</h3>
+<p class="lh-copy measure">ATF approves Howell Mountain AVA in January. The ’81 vintage is bottled and the 5L’s received etched bottles for the first time. Randy made the Livingstone – Moffett wine.</p>
+
+<h3 class="mt4">1985</h3>
+Randy parts way with Caymus. Construction begins on the brown house. </p>
+
+<h3 class="mt4">1986</h3>
+<p class="lh-copy measure">The family moves into the brown house. Randy makes the first Pahlmeyer wine after offering to buy Jayson’s fruit. </p>
+
+<h3 class="mt4">1987</h3>
+<p class="lh-copy measure">Raul Martinez is brought on the assist Randy in the vineyard, he was employee #1 and is still our vineyard manager to this day.</p>
+
+<h3 class="mt4">1988</h3>
+<p class="lh-copy measure">Mike graduates from UC Santa Barbara</p>  
+
+<h3 class="mt4">1989</h3>
+<p class="lh-copy measure">The caves are dug. Dunn has more space to store its barrels and Jenny and Kristina get a roller rink!</p>
+
+<h3 class="mt4">1991</h3>
+<p class="lh-copy measure">Mike marries Kara Pecota. Randy purchases the Park Muscatine Vineyard.</p>
+
+<h3 class="mt4">1994</h3>
+<p class="lh-copy measure">Mike and Kara bring their first son and the first grandchild into the family as Alex is born.</p>
+
+<h3 class="mt4">1995</h3>
+<p class="lh-copy measure">Erin Begerow joins the team and takes over the office management and mailing list coordination.</p>
+
+<h3 class="mt4">1996</h3>
+<p class="lh-copy measure">Jennifer graduates HS</p>
+
+<h3 class="mt4">1997</h3>
+<p class="lh-copy measure">Mike and Kara have a baby girl, the first granddaughter. Tatyana is born</p>
+
+<h3 class="mt4">1999</h3>
+
+<p class="lh-copy measure">Mike returns to the winery, working 3 days a week. Kristina graduates from High School. We have our biggest set back ever as Jennifer passes away.</p>
+
+<p class="bg-light-silver lh-copy measure">Mike returns to help out at the winery the first order of business, building a new crush pad. Jenny passes away. Kristina graduates H.S.</p>
+
+<h3 class="mt4">2001</h3>
+<p class="lh-copy measure">Randy makes the first vintage of the Palmaz wine here, as they construct their facility. Lori passes her exam and becomes a Master Gardner. Planted the Lake Vineyard and purchased the New Hearth property.</p>
+<p class="lh-copy measure">Adan Salgado is hired on full time to assist in the vineyard not only is he still a part of the team, but is responsible for waxing the Howell Mountain wine every vintage.</p>
+
+<h3 class="mt4">2003</h3>
+<p class="lh-copy measure">Randy makes the first vintage of Feather for the Long Shadows project in the Columbia Valley of Washington. Mike buys the old vine Petite Sirah from Randy’s Park Muscatine Vineyard and starts the Retro Cellars label with Kara. </p>
+
+<h3 class="mt4">2004</h3>
+<p class="lh-copy measure">Mike sells the bike shop and renovations begin on the white house (office). Sentinel Hill is purchased.</p>
+
+<h3 class="mt4">2005</h3>
+<p class="lh-copy measure">Kristina graduates from Cal Poly. The first class of their Wine and Viticulture program. </p>
+<p class="lh-copy measure">Rosalio Olivera is hired full time to assist in the vineyard and remains a valuable member of the team today.</p>
+
+<h3 class="mt4">2006</h3>
+<p class="lh-copy measure">Kristina comes to work full time at the winery. Randy and Lori close on the Wildlake Property</p>
+<p class="lh-copy measure">Marcos Olivera joins us full time. He is the back bone of the vineyard crew and if Raul ever retires most certainly will take his place.</p>
+
+<h3 class="mt4">2010</h3>
+<p class="lh-copy measure">Kristina marrie Brian Buchanan</p>
+
+<h3 class="mt4">2013</h3>
+<p class="lh-copy measure">Kristina and Brian welcome their first daughter, Taylor, into the world</p>
+
+<h3 class="mt4">2014</h3>
+<p class="lh-copy measure">Adriaan Foote joins the team as Mike’s assistant in the cellar</p>
+
+<h3 class="mt4">2015</h3>
+<p class="lh-copy measure">Ashlyn, Kristina and Brian’s second daughter is born.</p>
+<p class="lh-copy measure">Fernando Olivera Hernandez is hired full time with us</p>
+
+<h3 class="mt4">2016</h3>
+<p class="lh-copy measure">Ben Hiza comes up to assist Mike with bottling the 2013’s and is now assisting with the national distribution, tours and whatever else needs doing.</p>
