--- a/source/year-at-dunn.html.erb
+++ b/source/year-at-dunn.html.erb
@@ -2,6 +2,44 @@
 title: "A Year at Dunn" 
 ---
 
+While bud break occurs at a slightly different time every year and we rarely start and finish harvesting on the same dates, the cycles are similar. Here is what it generally looks like, up here on the mountain.
+
+<h2>January</h2>
+<p class="lh-copy measure">The rains started sometime around October and generally peak in volume and frequency in January. The vines are all dormant in the vineyard and we are just finishing up racking all the wine at the winery. We tend to have more frequent visits from our distribution partners this time of year. They have concluded the chaos of their holiday sales rush and enjoy that the Valley is fairly quiet at this time of year.</p>
+
+<h2>February</h2>
+<p class="lh-copy measure">Out in the vineyard we pre-prune the vines. For the most part this expedites the pruning process in March, and it keeps us busy during this slower time of year. The Howell Mountain wine is released to our distribution partners.</p>
+
+<h2>March</h2>
+<p class="lh-copy measure">Pruning the vines is now in full force. We start working on the weeds and preparing to avoid any mildew.</p>
+
+<h2>April</h2>
+<p class="lh-copy measure">The buds are starting to break, which means we are on high alert for the next couple of months. Any threat of frost and we go to our overhead sprinklers and the wind machine to try and protect what will become our crop. Frost is a serious concern up here on the mountain and can cause considerable damage (in 2008 we had four continuous days of 19 degrees and were only able to make about half the wine we normally do).</p>
+
+<h2>May</h2>
+<p class="lh-copy measure">Still vigilantly protecting from any frost threat and otherwise preparing the vineyards for the upcoming growing season. In the winery the process of bottling begins. About 3 weeks before the wine goes into bottle everything must be staged. We need to select which lots will be blended into the Napa wine for the Napa bottling and then the rest will be blended together to create the Howell Mountain wine. </p>
+
+<h2>June</h2>
+<p class="lh-copy measure">After the blending of the wine it is time to put it in bottles. Generally at the beginning of the month the mobile bottling line comes up the mountain and for 3 days friends and family gather to bottle all the wines. Everything must be organized. Loading the truck with glass and removing the full bottles from the truck are manual portions of the process. The truck will fill, cork, label and foil (Napa Valley wine) 99 bottles a minute. If we can’t keep it full of glass, or push the finished cases through the taping machine as fast as it runs, then we take longer at best, or chaos ensues at worst. Needless to say there is no one happier to see the last box slide down the conveyor than Mike, and no one is more happy than Lori to see the last car pull out of the driveway the noise of the truck the glass and all the voices fade back into the serenity of the woods. </p>
+
+<h2>July</h2>
+<p class="lh-copy measure">Randy and Mike celebrate their birthdays. The newsletter goes out to our loyal mailing list and Erin begins organizing the orders for the Fall/Winter release. Adan starts waxing the Howell Mountain bottles so they are ready to ship.</p>
+
+<h2>August/September/October</h2>
+<p class="lh-copy measure">
+	This is crunch time, or should we say crush time. As we start taste testing the grapes and things draw near the crush pad needs to be set up and prepped. When Randy gives the go ahead, all hands are on deck; picking, crushing, pressing, pumping over and cleaning, lots and lots of cleaning. Once the wine is dry (no more sugar) we start barreling down. This generally begins in October and runs through November (not always, in 2011 we didn’t start picking grapes until October 29th).  
+</p>
+
+
+<h2>November/December</h2>
+<p class="lh-copy measure">As the crush draws to a close, we begin the process of racking the wines and the cycle starts all over again.</p>
+
+
+
+<div class="bg-light-silver pa4">
+<p class="i">Current Copy</p>
+
+
 <p class="lh-copy measure">Taking a look at the yearly activities allows our consumers to see what goes on in order to deliver the finished product.  Starting out at the beginning of the year, January brings much rain to the area.  Here on the hill the vines are dormant. In the winery we are racking.  February is spent pre- pruning the vineyards to get rid of excess canes.  During March, workers revisit the vines for a second pruning and or a late pruning for frost.  January, February, and March are typically quieter months that allow for several business trips and wine events off premise.</p>
 
 <p class="lh-copy measure">April and May are the time of the year for early morning wake-ups.  During these months we must insure that our frost protection is up and running in order to safely protect our buds.  We protect against frost in two ways, over-head sprinklers and wind machines. In April 2008 we experienced extended front during budbreak. We had a freeze that lasted several nights and days. Instead of producing 4,500 cases that year we had a total of just 2,300 cases.  Budbreak is a crucial time of the year.</p>
@@ -12,4 +50,4 @@ title: "A Year at Dunn"
 
 <p class="lh-copy measure">August, September and October are the crunch months &#8211; or should we say crush months.  Activities consist of getting crush equipment ready, testing grapes, and hoping for good weather.  Once harvest has started everyone pitches in picking, crushing, pressing and pumping over.  Barreling down the wines may start in October and continue into November.  Day in day out, Mike is hard at work on the crush pad and in the cave. During breaks in the noisy machinery you will catch a few notes from a song Mike is signing as he prepares for his <a href="https://www.facebook.com/thelastresortnapa/info" target="_blank">next gig</a>. Once the harvest over, equipment is cleaned and put away till next year. In November and December we begin racking the wines and the cycle starts anew. And once again, we are able to leave the winery and participate in more tastings, wine dinners and business trips. </p>
 
-
+</div>
