a couple small fixes

--- a/source/family.html.erb
+++ b/source/family.html.erb
@@ -7,7 +7,7 @@ title: "Family"
 
 <h2 class="normal mt5">Randy Dunn</h2>
 <img src="https://i0.wp.com/www.dunnvineyards.com/wp-content/uploads/2014/06/Randy.jpg">
-<p class="lh-copy measure">Founder, farmer, activist and winemaking pioneer of Howell Mountain. Randy started his wine career working for Charlie Wagner as the first enologist for Caymus Vineyards. He went on to make wine for Livingston, La Jota, Pahlmeyer and Palmaz to name a few. He currently makes the Feather wine with the Long Shadows project in Walla Walla, Washington. An avid pilot, mountain biker and nuisance to any hillside developer, he is happy to be called a dirt loving hippie, but you’d probably think he’s more of a</p> cowboy.
+<p class="lh-copy measure">Founder, farmer, activist and winemaking pioneer of Howell Mountain. Randy started his wine career working for Charlie Wagner as the first enologist for Caymus Vineyards. He went on to make wine for Livingston, La Jota, Pahlmeyer and Palmaz to name a few. He currently makes the Feather wine with the Long Shadows project in Walla Walla, Washington. An avid pilot, mountain biker and nuisance to any hillside developer, he is happy to be called a dirt loving hippie, but you’d probably think he’s more of a cowboy.</p> 
 
 
 <h2 class="normal mt5">Lori Dunn</h2>
