--- a/source/contact.html.erb
+++ b/source/contact.html.erb
@@ -3,11 +3,11 @@ title: "Contact"
 ---
 
 
-Dunn Vineyards is a small working farm. We enjoy having people up to see what’s going on, but we are frequently busy tending to the vines, making wine or fixing equipment. The winery is also the home of Randy and Lori and after a week of work we love the peace and quiet of living in the woods. This means that we do not host anyone on the weekend. Please feel free to email <%= mail_to 'ben@dunnvineyards.com', "Ben" %> and if we are available, during the week we’d be more than happy to show you around. 
+<p class="lh-copy measure">Dunn Vineyards is a small working farm. We enjoy having people up to see what’s going on, but we are frequently busy tending to the vines, making wine or fixing equipment. The winery is also the home of Randy and Lori and after a week of work we love the peace and quiet of living in the woods. This means that we do not host anyone on the weekend. Please feel free to email <%= mail_to 'ben@dunnvineyards.com', "Ben" %> and if we are available, during the week we’d be more than happy to show you around.</p>
 
 
 <h2 class="normal mt5">The Mailing List</h2>
-Our wine is sold direct to our loyal customers via our annual newsletter.  While the Dunn wines have historically proven to be age worthy and are highly sought after by fans and collectors alike. We do re-release wines from time to time to our mailing list customers. If you have not purchased our wine from us directly and are interested in becoming a part of our annual newsletter, please email <%= mail_to 'info@dunnvineyards.com', "info@dunnvineyards.com" %> for information.
+<p class="lh-copy measure">Our wine is sold direct to our loyal customers via our annual newsletter.  While the Dunn wines have historically proven to be age worthy and are highly sought after by fans and collectors alike. We do re-release wines from time to time to our mailing list customers. If you have not purchased our wine from us directly and are interested in becoming a part of our annual newsletter, please email <%= mail_to 'info@dunnvineyards.com', "info@dunnvineyards.com" %> for information.</p>
 
 
 <div class="bg-light-silver mv5 pa5">
