--- a/source/vineyards.html.erb
+++ b/source/vineyards.html.erb
@@ -6,7 +6,7 @@ title: "Vineyards"
 
 <h2 class="normal mt5 mb0">Alta Tierra Vineyard</h2>
 <p class="lh-copy i measure mt0">Formerly the "Trailer Vineyard"</p>
-<p class="lh-copy measure">This was the original vineyard purchased in 1978 by Randy and Lori. It was replanted in 2015 and subsequently renamed as well. The orientation of the vineyard is basically East/West the Cabernet is grafted on rootstock 3309c with spacing between 8 and 9 x 4.5 depending on the slope.</p>
+<p class="lh-copy measure">This was the original vineyard purchased in 1978 by Randy and Lori. . After the 2013 vintage we tore out the old vineyard, and began the replant. In 2016 we grafted Cabernet Sauvignon onto the rootstock and renamed the vineyard "Alta Tierra". The orientation of the vineyard is basically East/West the Cabernet is grafted on rootstock 3309c with spacing between 8 and 9 x 4.5 depending on the slope.</p>
 
 <h2 class="normal mt5">Frank Vineyard</h2>
 <p class="lh-copy measure">We have managed this vineyard since the beginning of 1979. Named for Henry Frank who entrusted Randy with managing this vineyard for him back in 1979. Though we don’t own it, it feels very much like part of our land as it is nestled between two of our vineyards and farmed by us. This vineyard was planted in 1965 and the two blocks were replanted in two separate years; 1989 and 1993. The block planted in 1989 is on 110R rootstock and the 1993 block is planted to 3309. The vines are planted North/South.</p>
@@ -16,7 +16,6 @@ title: "Vineyards"
 
 <h2 class="normal mt5">Lake Vineyard</h2>
 <p class="lh-copy measure">This vineyard is located directly adjacent to the winery and Randy and Lori’s home. Before this vineyard was planted, Randy grew hay for 20 years to feed the Dunn’s horses. These 8 acres are mostly cabernet sauvignon, except for a few rows of Syrah (for home consumption). There is also about 1 acre of Petite Sirah and Peloursin planted on the west boarder of the vineyard. Mike named this Los Abuelos and uses it for his Retro Cellars label. The Cabernet Sauvignon was planted in 3 blocks. Lake I was planted in 2000 using 101-14 rootstock. Lake II was planted in 2001 on 3309. The last block, Lake III, was planted also on 3309 in 2003. Each block contains a mix of 4 different clones; 337, 15, Dunn (grafting’s from our Trailer Vineyard) and Frank (grafting’s from the Harry Frank vineyard). This vineyard is the coolest of all, as it sits in a small valley, and requires overhead sprinklers for frost protection along with a wind machine.</p>
-
 
 
 <hr class="mt6">
